--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ body {
     position: relative;
 }
 
-
 .logo-box {
     position: absolute;
     top: 40px;
@@ -57,6 +56,7 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -64,11 +64,48 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
 }
 
 .heading-primary-sub {
     display: block;
-    font-size: 18px;
+    font-size: 19px;
     font-weight: 700;
-    letter-spacing: 14.5px;
+    letter-spacing: 14px;
+    animation: moveInRight 1s ease-out;
 }
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
