Implemented the About section

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,6 @@
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 1.6rem;
     line-height: 1.7;
     color: $color-gray-dark;
     padding: 3rem;
@@ -31,3 +30,40 @@ body {
         margin-bottom: 6rem;
     }
 }
+
+.heading-secondary {
+    font-size: 3.2rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-image: linear-gradient(
+        to right, 
+        $color-primary-light, 
+        $color-primary-dark
+        );
+    display: inline-block;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    letter-spacing: 2px;
+    transition: all .2s;
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg) scale(1.1);
+        text-shadow: .5rem 1rem 2.2rem rgba($color-black, .2)
+    }
+}
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: $default-font-size;
+    
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
+
