Added @supports feature query for modern CSS properties

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,6 +8,7 @@ body {
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 
     &--main {
