--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -23,12 +23,18 @@
         width: 15rem;
         height: 15rem;
         float: left;
-        -webkit-shape-outside: circle(50% at 50% 50%);
-        shape-outside: circle(50% at 50% 50%);
-        -webkit-clip-path: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
+        overflow: hidden;
+        border-radius: 50%;
+
+        @supports (-webkit-clip-path: polygon(0 0)) or (clip-path: polygon(0 0)) {
+            -webkit-clip-path: circle(50% at 50% 50%);
+            clip-path: circle(50% at 50% 50%);
+            -webkit-shape-outside: circle(50% at 50% 50%);
+            shape-outside: circle(50% at 50% 50%);
+            border-radius: none;
+        }
 
         @include respond(phone) {
             transform: translateX(-3rem) skewX(0);
@@ -39,6 +45,7 @@
         height: 100%;
         transition: all .5s;
         transform: translateX(-4rem) scale(1.4);
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
     }
 
@@ -61,6 +68,7 @@
         text-align: center;
         opacity: 0;
         transition: all .5s;
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
     }
 
